--- a/presentation.tex
+++ b/presentation.tex
@@ -26,8 +26,8 @@
 \usetheme[compress]{Berlin}
 
 \usepackage{pgfpages}
-\setbeameroption{show notes}
-\setbeameroption{show notes on second screen=right}
+%\setbeameroption{show notes}
+%\setbeameroption{show notes on second screen=right}
 
 \usebackgroundtemplate
 {%
@@ -425,17 +425,27 @@
 
 \subsection{Components}
 \frame{
-	\frametitle{Model}
+	\frametitle{Components}
 	Components
 	\begin{itemize}
 		\item Primitive components
 		\item Sub-assemblies
 	\end{itemize}
+	\note{
+	Hur definierar vi en task?
+	\begin{itemize}
+		\item Primitive components: komponenter som ges till assemblyn utifrån
+		\item Sub-assemblies: består av primitive components och andra sub-assemblies
+		\item I modellen ses båda som components $\rightarrow$ underkategorier
+		\item man markerar den task en sub-assembly blir skapad
+	\end{itemize}
+		
+	}
 }
 
 \subsection{Storage Mediums}
 \frame{
-	\frametitle{Model}
+	\frametitle{Storage Mediums}
 	Storage mediums
 	\begin{itemize}
 		\item Tray - Top tray, Button tray, etc.
@@ -581,8 +591,9 @@
 	\end{figure}
 	\end{adjustwidth}
 		\note{
+			Undvika kollision:
 			\begin{itemize}
-				\item Individuella tasks får inte överlappa på fixtures
+				\item Individuella tasks får inte överlappa på fixtures, trays eller outputs  
 				\item Tiden då fixtures är upptagna får inte överlappa, identifiera put och take för en komponent och komponent som har put komponenten som en del i dess sub-assembly
 			\end{itemize}
 		}
@@ -666,7 +677,12 @@
 		\item Tool used by tasks
 	\end{itemize}
 	
-	\note{Antar att det finns en uppsättning av sagda tools för varje maskin}
+	\note{
+	\begin{itemize}
+		\item För att veta när en tool change uppstår
+		\item Antar att det finns en uppsättning av sagda tools för varje maskin
+	\end{itemize}
+	}
 }
 
 \frame{
@@ -738,16 +754,16 @@
 		\end{adjustwidth}
 		\note{
 		\begin{itemize}
-			\item Notera att "Lift top-button" inte har tool specificerad
+			\item Notera att "Lift top-button" inte har tool specificerad $\rightarrow$ ger mer frihet med tool changes
 		\end{itemize}
 		
 		}
 }
 
-\subsection{Labeling}
+\subsection{Action}
 \frame{
-	\frametitle{Model}
-	Label tasks
+	\frametitle{Action}
+	Task actions
 	\begin{itemize}
 		\item Taking
 		\item Mounting
@@ -827,75 +843,6 @@
 }
 
 \frame{
-	\frametitle{Mounting}
-	\begin{adjustwidth}{-0.5cm}{}
-	\begin{figure}
-		\resizebox{\textwidth}{0.8\textheight}{
-			\begin{tikzpicture}[node distance=2cm]
-			\node (1) [task] {Take top};
-			\node (2) [task, right of=1, xshift=2.5cm] {Put top in fixture};
-			
-			\node (3) [task, below of=1] {Take button};
-			\node (4) [task, below of=2, fill=cyan!50] {Mount button on top};
-			
-			\node (5) [task, xshift=2.5cm, right of=4] {Angle top-button};
-			
-			\node (6) [task, right of=5, xshift=3cm, yshift=1cm] {Lift top-button, hold};
-			\node (7) [task, below of=6] {Lift top-button, support};
-			
-			\node (8) [task, right of=7, xshift=3.5cm, yshift=1cm] {Turn top-button};
-			
-			\node (10) [task, below of=8, fill=cyan!50] {Mount nut, hold};
-			\node (11) [task, below of=10, fill=cyan!50] {Mount nut, mount};
-			
-			\node (9) [task, below of=11] {Take nut};
-			
-			\node (12) [task, left of=11, xshift=-4cm, yshift=1cm] {Fixate top-button-nut};
-			
-			\node (13) [task, left of=12, xshift=-9.5cm] {Put top-button-nut in top tray};
-			\node (14) [task, below of=13] {Take top-button-nut from top tray};
-			
-			\node (15) [task, below of=9, yshift=-1.5cm] {Take switch};
-			\node (16) [task, left of=15, xshift=-3cm, fill=cyan!50] {Mount switch};
-			
-			\node (17) [task, below of=15] {Take bottom};
-			\node (18) [task, below of=16] {Put bottom in fixture};
-			
-			\node (19) [task, left of=16, xshift=-3.5cm] {Take bottom-switch};
-			
-			\node (20) [task, left of=19, xshift=-5cm] {Put bottom-switch on table};
-			
-			\node (21) [task, above of=20, fill=cyan!50] {Mount top-button-nut on bottom-switch};
-			
-			\draw [arrow] (1) -- (2);
-			\draw [arrow] (3) -- (4);
-			\draw [arrow] (2) -- (4);
-			\draw [arrow] (4) -- (5);
-			\draw [arrow] (5) -- (6);
-			\draw [arrow] (5) -- (7);
-			\draw [arrow] (7) -- (8);
-			\draw [arrow] (6) -- (8);
-			\draw [arrow] (8) -- (10);
-			\draw [arrow] (10) -- (12);
-			\draw [arrow] (9) -- (11);
-			\draw [arrow] (11) -- (12);
-			\draw [arrow] (12) -- (13);
-			\draw [arrow] (13) -- (14);
-			\draw [arrow] (15) -- (16);
-			\draw [arrow] (17) -- (18);
-			\draw [arrow] (18) -- (16);
-			\draw [arrow] (16) -- (19);
-			\draw [arrow] (19) -- (20);
-			\draw [arrow] (20) -- (21);
-			\draw [arrow] (14) -- (21);
-			
-			\end{tikzpicture}
-		}
-	\end{figure}
-	\end{adjustwidth}
-}
-
-\frame{
 	\frametitle{Putting}
 	\begin{adjustwidth}{-0.5cm}{}
 	\begin{figure}
@@ -962,6 +909,81 @@
 		}
 	\end{figure}
 	\end{adjustwidth}
+	\note{Ex. constraint\\
+		För tasks på en komponent, där det finns en take och en put, t.ex top (take top \& put top in fixture), måste take:en vara predecessor till put:en
+	}
+}
+
+\frame{
+	\frametitle{Mounting}
+	\begin{adjustwidth}{-0.5cm}{}
+	\begin{figure}
+		\resizebox{\textwidth}{0.8\textheight}{
+			\begin{tikzpicture}[node distance=2cm]
+			\node (1) [task] {Take top};
+			\node (2) [task, right of=1, xshift=2.5cm] {Put top in fixture};
+			
+			\node (3) [task, below of=1] {Take button};
+			\node (4) [task, below of=2, fill=cyan!50] {Mount button on top};
+			
+			\node (5) [task, xshift=2.5cm, right of=4] {Angle top-button};
+			
+			\node (6) [task, right of=5, xshift=3cm, yshift=1cm] {Lift top-button, hold};
+			\node (7) [task, below of=6] {Lift top-button, support};
+			
+			\node (8) [task, right of=7, xshift=3.5cm, yshift=1cm] {Turn top-button};
+			
+			\node (10) [task, below of=8, fill=cyan!50] {Mount nut, hold};
+			\node (11) [task, below of=10, fill=cyan!50] {Mount nut, mount};
+			
+			\node (9) [task, below of=11] {Take nut};
+			
+			\node (12) [task, left of=11, xshift=-4cm, yshift=1cm] {Fixate top-button-nut};
+			
+			\node (13) [task, left of=12, xshift=-9.5cm] {Put top-button-nut in top tray};
+			\node (14) [task, below of=13] {Take top-button-nut from top tray};
+			
+			\node (15) [task, below of=9, yshift=-1.5cm] {Take switch};
+			\node (16) [task, left of=15, xshift=-3cm, fill=cyan!50] {Mount switch};
+			
+			\node (17) [task, below of=15] {Take bottom};
+			\node (18) [task, below of=16] {Put bottom in fixture};
+			
+			\node (19) [task, left of=16, xshift=-3.5cm] {Take bottom-switch};
+			
+			\node (20) [task, left of=19, xshift=-5cm] {Put bottom-switch on table};
+			
+			\node (21) [task, above of=20, fill=cyan!50] {Mount top-button-nut on bottom-switch};
+			
+			\draw [arrow] (1) -- (2);
+			\draw [arrow] (3) -- (4);
+			\draw [arrow] (2) -- (4);
+			\draw [arrow] (4) -- (5);
+			\draw [arrow] (5) -- (6);
+			\draw [arrow] (5) -- (7);
+			\draw [arrow] (7) -- (8);
+			\draw [arrow] (6) -- (8);
+			\draw [arrow] (8) -- (10);
+			\draw [arrow] (10) -- (12);
+			\draw [arrow] (9) -- (11);
+			\draw [arrow] (11) -- (12);
+			\draw [arrow] (12) -- (13);
+			\draw [arrow] (13) -- (14);
+			\draw [arrow] (15) -- (16);
+			\draw [arrow] (17) -- (18);
+			\draw [arrow] (18) -- (16);
+			\draw [arrow] (16) -- (19);
+			\draw [arrow] (19) -- (20);
+			\draw [arrow] (20) -- (21);
+			\draw [arrow] (14) -- (21);
+			
+			\end{tikzpicture}
+		}
+	\end{figure}
+	\end{adjustwidth}
+	\note{Ex. constraint\\
+		För tasks på en komponent, där det finns en take och en mount men ingen put, t.ex button (take button \& Mount button on top), måste take:en vara predecessor till mount:en
+	}
 }
 
 \frame{
@@ -1031,6 +1053,14 @@
 		}
 	\end{figure}
 	\end{adjustwidth}
+	\note{
+		\begin{itemize}
+			\item Vi kan inte sätta upp constraint om ordning baserat på att tasks är move. 
+			\item T.ex. kan flera move hantera tasks med samma komponent (ex. highlight:ade) $\rightarrow$ kan inte säga något om ordningen.
+			\item Så för att bl.a. lösa det: $\downarrow$ 
+		\end{itemize}
+		
+	}
 }
 
 \subsection{Grouping}
@@ -1111,6 +1141,12 @@
 			}
 		\end{figure}
 		\end{adjustwidth}
+		\note{
+			\begin{itemize}
+				\item Array med tasks
+				\item Sätter upp predecessors
+			\end{itemize}
+		}
 }
 
 \frame{
@@ -1180,6 +1216,13 @@
 			}
 		\end{figure}
 		\end{adjustwidth}
+		\note{
+			\begin{itemize}
+				\item Representera en task med flera maskiner
+				\item En task med flera maskiner vs flera concurrent tasks
+				\item En task med flera maskiner $\rightarrow$ tasks måste kunna ha flera predecessors $\rightarrow$ fungerar inte här
+			\end{itemize}
+		}
 }
 
 \subsection{Filter}
@@ -1190,6 +1233,7 @@
 	\item Predecessor filter
 	\end{itemize}
 	\note{
+		Filtrera domäner\\
 		Temporal filter:
 		\begin{itemize}
 			\item Matris med alla möjliga moves $\rightarrow$ vi kan räkna ut värsta och bästa fallet för hela assemblyn
@@ -1229,7 +1273,7 @@
 		
 		Reified:
 		\begin{itemize}
-			\item Kopplar ihop ett constraint med en variable("sanningsvärde") $\rightarrow$ är variabeln sann gäller constraint:et, är varibeln falsk gäller inte constraint:et, och vise versa
+			\item Kopplar ihop ett constraint med en variable("sanningsvärde") $\rightarrow$ är variabeln sann måste constraint:et gälla, är varibeln falsk kan inte constraint:et gälla, och vise versa
 			\item Används ofta för implikationer och ekvivalenser
 			\item Kan göra söktiden längre
 			\item Aktivt unvikit direkta användningar
@@ -1256,6 +1300,7 @@
 			\item Opturion CPX
 			\item Choco3
 		\end{itemize}
+		\note{OM MINDRE ÄN 10 MINUTER KVAR, HOPPA SOLVERINTRODUKTIONER}
 }
 
 \frame{
@@ -1349,6 +1394,15 @@
 				512 t.u.			   
 			\end{column}
 		\end{columns}
+		\note{
+			\begin{itemize}
+				\item<1-> Uppskattat från video
+				\item<1-> 1 t.u. $\neq$ 1 s. 1 t.u. $\approx$ 4 s
+				\item<2> I stort sätt samma tid
+				\item<2> Assemblyn från solver samma som handgjord
+				\item<2> Skillnad beror på när moves påbörjas i relation till andra tasks 
+			\end{itemize}
+		}
 }
 
 \frame{
@@ -1375,6 +1429,10 @@
 	
 	\note<1>{
 		\begin{itemize}
+			\item Tid - Solvern hittade den optimala lösningen och avslutade sökninigen $\rightarrow$ konstaterade att det var den optimala, inom 4h
+			\item ! - Fel i inläsning av FlatZinc
+			\item - - Solvern avslutade inte sökningen inom 4h, men kan ha hittat lösningar(inklusive optimal)
+			\item Notera Gecode och 2.0.1 vs 1.6
 			\item 1011156 - 0:16:51
 			\item 71761 - 0:01:11
 			\item 71186 - 0:01:11
@@ -1401,6 +1459,12 @@ Hittar 1 lösning, den optimala, på ungefär samma tid som den tidigare
 
 \note<6>{
 Hittar 2 lösningar direkt
+
+\begin{itemize}
+	\item np-komplett $\rightarrow$ kan inte garatera någon lösning
+	\item Vi vet endast att de som avslutade sökningen i detta fallet kan avsluat sökninigen inom tid $\rightarrow$ vet inget om andra fall
+	\item Även de solvers som inte avlsutade sökningen kan vara av värde i andra situationer
+\end{itemize}
 }
 
 }
@@ -1469,6 +1533,7 @@ Hittar 2 lösningar direkt
 }
 
 \section{Conclusions}
+\subsection{Conclusions}
 \frame{
 	\frametitle{Conclusions}
 	\begin{itemize}
@@ -1489,6 +1554,8 @@ Hittar 2 lösningar direkt
 		\note[item]{Endast testat filter i grupp, alla filter kanske inte behövs, bygga vidare på dem som fungerade bäst}
 		\item More realistic representation of tools available
 		\note[item]{Vi antar att det finns en uppsättning tools till varje maskin, så kanske inte är fallet, finns kanske bara ett visst antal tools tillgängliga}
+		\item Test solvers with more assemblies
+		\note[item]{Vi har bara resultat för denna assemblyn, resultat kanske varierar beroende på assembly}
 	\end{itemize}
 }
 
